[workspace]
resolver = "2"
members = [
    "crates/sl-rust",
    "crates/wasi-core-utils",
    "crates/wasibox",
    "crates/wasi-shell",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Antigravity <antigravity@google.com>", "oligami <nziq53@gmail.com>"]
license = "MIT"
repository = "https://github.com/oligamiq/sl-rust"
homepage = "https://github.com/oligamiq/sl-rust"
readme = "README.md"

[workspace.dependencies]
sl-rust = { path = "crates/sl-rust" }
wasi-shell = { path = "crates/wasi-shell" }
shlex = "1.3"
colored = "3.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
regex = "1.10"
chrono = "0.4"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
