[package]
name = "arch-rust"
version = "0.1.0"
edition = "2024"
authors = ["Antigravity <antigravity@google.com>"]
description = "A Rust implementation of the GNU arch command"
license = "MIT"
keywords = ["command-line-utilities", "wasi", "gnu", "arch"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "arch"
path = "src/main.rs"

[target.'cfg(all(not(windows), not(target_os = "wasi")))'.dependencies]
libc = "0.2"
