[package]
name = "sl-rust"
version = "1.0.2"
edition.workspace = true
autobins = false
description = "SL - An ASCII art train animation"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["terminal", "animation", "train", "sl", "wasi"]
categories = ["command-line-utilities"]

[lib]
name = "sl"
path = "src/lib.rs"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
crossterm = "0.29"

[[bin]]
name = "sl"
path = "src/main.rs"

[features]
default = []
debug = []
