[package]
name = "tree-rust"
version = "0.1.0"
edition = "2024"
authors = ["Antigravity <antigravity@google.com>"]
description = "A Rust implementation of the tree command"
license = "MIT"
keywords = ["command-line-utilities", "wasi", "tree", "directory"]
categories = ["command-line-utilities"]

[lib]
name = "tree_lib"
path = "src/lib.rs"

[[bin]]
name = "tree"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
colored = "3.0"
