[package]
name = "wasi-core-utils"
version = "0.1.0"
edition = "2024"
authors = ["Antigravity <antigravity@google.com>"]
description = "A collection of core utilities optimized for WASI"
license = "MIT"
keywords = ["command-line-utilities", "wasi", "coreutils", "busybox"]
categories = ["command-line-utilities"]

[lib]
name = "wasi_core_utils"
path = "src/lib.rs"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
chrono = "0.4"

[target.'cfg(all(not(windows), not(target_os = "wasi")))'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
