[package]
name = "wasi-shell"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A modular WASI-compatible shell with piping and redirection"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
wasibox-core = { workspace = true, default-features = true }
sl-rust = { workspace = true }
shlex = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
