[package]
name = "wasibox-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A collection of core utilities optimized for WASI"
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["cli-utilities", "wasi", "coreutils", "busybox"]
categories = ["command-line-utilities"]

[features]
default = [
    "arch", "cat", "cp", "dir", "echo", "link", "ln", "ls", "mkdir",
    "mv", "pwd", "rm", "rmdir", "seq", "sleep", "tail", "tee", "touch", "tree", "uname", "unlink",
    "head", "wc", "grep", "whoami", "basename", "dirname", "true", "false", "yes", "env"
]
arch = []
cat = []
cp = []
dir = ["ls"]
echo = []
link = []
ln = []
ls = []
mkdir = []
mv = []
pwd = []
rm = []
rmdir = []
seq = []
sleep = []
tail = []
tee = []
touch = []
tree = []
uname = []
unlink = []
head = []
wc = []
grep = ["dep:regex"]
whoami = []
basename = []
dirname = []
true = []
false = []
yes = []
env = []

[lib]
name = "wasibox_core"
path = "src/lib.rs"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true, optional = true }

[target.'cfg(all(not(windows), not(target_os = "wasi")))'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
