[package]
name = "wasibox"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BusyBox-like umbrella crate for WASI utilities and SL animation"
license.workspace = true

[features]
default = [
    "sl", "arch", "cat", "cp", "dir", "echo", "link", "ln", "ls", "mkdir",
    "mv", "pwd", "rm", "rmdir", "sleep", "tail", "tee", "touch", "tree", "uname", "unlink",
    "head", "wc", "grep", "whoami", "basename", "dirname", "true", "false", "yes", "env"
]

sl = ["sl-rust"]
arch = ["wasibox-core/arch"]
basename = ["wasibox-core/basename"]
cat = ["wasibox-core/cat"]
cp = ["wasibox-core/cp"]
dir = ["wasibox-core/dir"]
dirname = ["wasibox-core/dirname"]
echo = ["wasibox-core/echo"]
env = ["wasibox-core/env"]
false = ["wasibox-core/false"]
grep = ["wasibox-core/grep"]
head = ["wasibox-core/head"]
link = ["wasibox-core/link"]
ln = ["wasibox-core/ln"]
ls = ["wasibox-core/ls"]
mkdir = ["wasibox-core/mkdir"]
mv = ["wasibox-core/mv"]
pwd = ["wasibox-core/pwd"]
rm = ["wasibox-core/rm"]
rmdir = ["wasibox-core/rmdir"]
sleep = ["wasibox-core/sleep"]
tail = ["wasibox-core/tail"]
tee = ["wasibox-core/tee"]
touch = ["wasibox-core/touch"]
tree = ["wasibox-core/tree"]
true = ["wasibox-core/true"]
uname = ["wasibox-core/uname"]
unlink = ["wasibox-core/unlink"]
wc = ["wasibox-core/wc"]
whoami = ["wasibox-core/whoami"]
yes = ["wasibox-core/yes"]

[dependencies]
sl-rust = { workspace = true, optional = true }
wasibox-core = { workspace = true, optional = true, default-features = false }
clap = { workspace = true }
